fix: overflow of project titles

--- a/styles/projects.module.sass
+++ b/styles/projects.module.sass
@@ -32,6 +32,7 @@
         bottom: .3em
 
       @media screen and (max-width: variables.$mobile-width)
+        width: auto
         font-size: 2.2em
 
       &:hover
